# gromacs-hub

./: Dockerfile  Makefile  gmx-main.ipynb  setup.cfg  start-devel.sh  start-hub.sh
css/: index.css  theme-dark.css
helm/: form-0.py  form-1.py  pre-spawn-hook.py  values.yaml
k8s-dev/: deployment.yaml  ingress.yaml  service.yaml
src/gmx/widgets/: __init__.py  afbias.py  alpharmsd.py  bias.py  ctrl.py  diag.py  main.py  md.py  mdview.py  mol_select.py  mol_view.py  status.py  warmup.py
src/gmx/wrapper/: gmx.py
