[metadata]
name = gmx
version = 0.0.1
author = Ales Krenek
author_email = ljocha@ics.muni.cz
description = Simple K8s gromacs wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.ics.muni.cz/3086/ASMSA
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts = 
install_requires =
    kubernetes
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
